# CopyDocx

./: .env  Cargo.toml  Dockerfile  LICENSE  README.md  saved.txt
src/: db.rs  lib.rs  main.rs
static/: index.html  info.html  page.html  page.js  script.js  styles.css
